force-app/main/default/objects/Photo__c/Photo__c.object-meta.xml
<CustomObject>
    <label>Photo</label>
    <nameField>
        <label>Photo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Photos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>