force-app/main/default/objects/Photo__c/fields/After_Service__c.field-meta.xml
<CustomField>
    <fullName>After_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Service</label>
    <type>Checkbox</type>
</CustomField>