force-app/main/default/objects/Photo__c/fields/Before_Service__c.field-meta.xml
<CustomField>
    <fullName>Before_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Service</label>
    <type>Checkbox</type>
</CustomField>