force-app/main/default/objects/Photo__c/fields/Instructional_Photo__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Photo__c</fullName>
    <label>Instructional Photo</label>
    <type>Url</type>
</CustomField>