force-app/main/default/objects/Photo__c/fields/Sample_Photo__c.field-meta.xml
<CustomField>
    <fullName>Sample_Photo__c</fullName>
    <label>Sample Photo</label>
    <type>Url</type>
</CustomField>