force-app/main/default/objects/Photo__c/fields/Service_in_Action__c.field-meta.xml
<CustomField>
    <fullName>Service_in_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service in Action</label>
    <type>Checkbox</type>
</CustomField>