force-app/main/default/objects/Photo__c/validationRules/Action_Shots_Unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Action_Shots_Unique</fullName>
    <active>true</active>
    <errorConditionFormula>Service_in_Action__c &amp;&amp; ( Before_Service__c ||  After_Service__c )</errorConditionFormula>
    <errorMessage>Action shots must be built as a unique photo.</errorMessage>
</ValidationRule>